--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "jest-another-rpg",
+  "name": "rpg",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sagatto/jest-another-RPG.git"
-  },
-  "author": "Sagat",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sagatto/jest-another-RPG/issues"
-  },
-  "homepage": "https://github.com/sagatto/jest-another-RPG#readme",
-  "devDependencies": {
-    "jest": "^26.6.3"
-  },
   "dependencies": {
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.0.3",
+    "jest": "^24.9.0"
   }
 }
